assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Lato:400,300,700,900');

@import url('https://fonts.googleapis.com/css?family=Charmonman|Gamja+Flower|Indie+Flower|Pacifico');
@media only screen and (min-width: 600px) {

  .bgimg-1 {
    background-image: url("../img/bg-1-main.jpeg");
    background-position: center top;
    min-height: 600px;
  }

  .bgimg-2 {
    background-image: url("../img/bg-2-main.jpeg");
    background-position: center top;
    min-height: 600px;
  }
  .bgimg-3 {
    background-image: url("../img/bg-3-main.jpeg");
    background-position: center top;
    min-height: 600px;
  }
  .bgimg-4 {
    background-image: url("../img/bg-4-main.jpeg");
    background-position: center top;
    min-height: 600px;
  }
  .bgimg-5 {
    background-image: url("../img/bg-5-main.jpeg");
    background-position: center top;
    min-height: 600px;
  }

  .page-title{
    font-size:40px;
    font-family:'Pacifico', cursive;
  }
  .mapContent{
    width:100%; height:300px;
  }
}
@media only screen and (max-width: 600px) {
  /*Mobile screen*/
  .mapContent{
    width:100%; height:300px;
  }
  .bgimg-1 {
    background-image: url("../img/bg-1-small.jpeg");
    background-position: center top;
    min-height: 600px;
    background-size: auto;
  }
  .bgimg-2 {
    background-image: url("../img/bg-2-small.jpeg");
    min-height: 600px;
    background-position: center top;
    background-size: auto;
  }
  .bgimg-3 {
    background-image: url("../img/bg-3-small.jpeg");
    background-position: center top;
    min-height: 600px;
    background-size: auto;
  }
  .bgimg-4 {
    background-image: url("../img/bg-4-small.jpeg");
    background-position: center top;
    min-height: 600px;
    background-size: auto;
  }
  .bgimg-5 {
    background-image: url("../img/bg-5-small.jpeg");
    background-position: center top;
    min-height: 600px;
    background-size: auto;
  }
  
  .page-title{
    font-size:30px;
    font-family:'Pacifico', cursive;
  }
}




/* ==== Google font ==== */
 html,body { height: 100%; margin: 0px; padding: 0px; }


body {
	background: #394864;
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-size: 16px;
    color: #555;
    line-height: 1.6em;
    -webkit-font-smoothing: antialiased;
    -webkit-overflow-scrolling: touch;
}
.title{
  font-family: 'Pacifico', cursive;
  font-size:30px;
}

.content{
  font-family:'Charmonman', cursive;
  font-weight: 400;
  font-size:18px;
  border-radius: 10px;
  border: 2px solid black;
  padding:20px 20px;
  margin-top:20px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Lato', cursive;
    font-weight: 300;
    color: #444;
}

h1 {
	font-size: 40px;
}

h3 {
	font-weight: 400;
}

h4 {
	font-weight: 400;
	font-size: 20px;
}

p {
    margin-bottom: 20px;
    font-size: 16px;
}


a {
    color: #ACBAC1;
    word-wrap: break-word;
    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
    transition: color 0.1s ease-in, background 0.1s ease-in;
}

a:hover,
a:focus {
    color: #4F92AF;
    text-decoration: none;
    outline: 0;
}

a:before,
a:after {
    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
    transition: color 0.1s ease-in, background 0.1s ease-in;
}

.alignleft {
    text-align: left;
}
.alignright {
    text-align: right;
}

.aligncenter {
    text-align: center;
}

.btn {
  display: inline-block;
  padding: 10px 20px;
  margin-bottom: 0;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.428571429;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
       -o-user-select: none;
          user-select: none;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 0;
}

.btn-theme  {
  color: #fff;
  background-color: #4F92AF;
  border-color: #4F92AF;
  transition: background 0.3s;
}
.btn-theme:hover  {
  color: #fff;
  background-color: #5cacce;
  border-color: #5cacce;
}


/* wrapper */

#wrapper {
	text-align: center;

  background-size: cover;
}
.container{
  margin-left:0px;
  margin-right:0px;
  width:100%;
}

.bgimg-1, .bgimg-2, .bgimg-3 {
  position: relative;
  opacity: 0.65;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

}

.white{
  color:#777;
  background-color:rgba(255,255,255);
}
.black{
  color: #ffd700;
}
.content-div{
  line-height: 28px;
  padding:20px 50px;
}



h2.subtitle {
	color: #fff;
	font-size: 24px;
}



/* countdown */
#countdown {
	font-size: 24px;;
	color: #fff;
	line-height: 1.1em;
	margin: 40px 0 60px;
}

.caption {
  position: relative;
  left: 0;
  margin-top:40px;
  width: 100%;
  text-align: center;
  color: #000;
}

.caption .border {
  background-color: rgba(0,0,0,0.5);
  color: #fff;
  padding: 18px;
  letter-spacing: 2px;
}

